--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="col-md-6 text-center">
-                    <img src="./assest/8.jpg" alt="John Doe" class="rounded-circle mb-3"
+                    <img src="./assest/IMG_3770.png" alt="John Doe" class="rounded-circle mb-3 bg-card"
                         style="width: calc(10.475rem + 15vw); height: calc(10.475rem + 15vw);">
                 </div>
             </div>
