--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 React.js, seamlessly integrating both the OpenWeather API for real-time weather data and
                                 the Rapid Geocity API for city searches. Users can enjoy a user-friendly interface that
                                 delivers accurate 7-day forecasts.</p>
-                            <a target="_blank" href="https://hassannazamul.github.io/clock/"
+                            <a target="_blank" href="https://hassannazamul.github.io/weather/"
                                 class="btn btn-primary bg-card">View Project
                             </a>
                         </div>
