Update Tic Tac Toe Game

--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
         <div class="container reveal">
             <h2 class="text-center">Projects</h2>
             <div class="row mt-5">
+
+                <!-- Weather App -->
                 <div class="col-md-6">
                     <div class="card bg-card" style="width: 25rem; ">
                         <div class="lund"><img class="card-img-top" src="./assest/waether.png" alt="Card image cap">
@@ -283,6 +285,29 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Tic Tac Toe Game -->
+                <div class="col-md-6">
+                    <div class="card bg-card" style="width: 25rem; ">
+                        <div class="lund"><img class="card-img-top" src="./assest/waether.png" alt="Card image cap">
+                        </div>
+
+                        <div class="card-body ">
+                            <h5 class="card-title"> <span>Tic Tac Toe </span></h5>
+                            <p class="card-text" style="color: white;">Developed a fully functional Tic Tac Toe game
+                                using React.
+                                Implemented game logic and state management to handle player moves, winning conditions,
+                                and game resets.
+                                Enhanced user experience by integrating sound effects for game interactions.
+                                Styled components to create an intuitive and visually appealing game board</p>
+                            <a target="_blank" href="https://hassannazamul.github.io/tic-tac-toe-game/"
+                                class="btn btn-primary bg-card">View Project
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Digital Clock -->
                 <div class="col-md-6">
                     <div class="card bg-card" style="width: 25rem; ">
                         <div class="lund"><img class="card-img-top" src="./assest/clock.png" alt="Card image cap"></div>
