--- a/index.html
+++ b/index.html
@@ -289,15 +289,14 @@
                 <!-- Tic Tac Toe Game -->
                 <div class="col-md-6">
                     <div class="card bg-card" style="width: 25rem; ">
-                        <div class="lund"><img class="card-img-top" src="./assest/waether.png" alt="Card image cap">
+                        <div class="lund"><img class="card-img-top" src="./assest/tictac.png" alt="Card image cap">
                         </div>
 
                         <div class="card-body ">
                             <h5 class="card-title"> <span>Tic Tac Toe </span></h5>
                             <p class="card-text" style="color: white;">Developed a fully functional Tic Tac Toe game
                                 using React.
-                                Implemented game logic and state management to handle player moves, winning conditions,
-                                and game resets.
+                                Implemented game logic and state management to handle player moves, winning conditions.
                                 Enhanced user experience by integrating sound effects for game interactions.
                                 Styled components to create an intuitive and visually appealing game board</p>
                             <a target="_blank" href="https://hassannazamul.github.io/tic-tac-toe-game/"
